client/sass/styles.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "selectize/selectize.bootstrap3";
@import "../bower_components/angular-ui-select/dist/select.css";

body{ 
    font-size:1em; 
}
html{ 
    font-size:100%; 
}

/* Recipe List */
.recipe-list{
    margin-top: 1em;
}

/* Recipe View */
.recipe-view{
    table {
        table-layout:fixed;
        tr{
            height: 1em;
        }
        td{
            overflow:hidden;white-space:nowrap; 
        }
    }
}
.panel-title a{
    width: 100%;
    display: block;
}

